[package]
name = "file_task"
version = "0.1.0"
edition = "2021"
authors = ["tcallan"]
description = "Monitor the status of tasks represented by files in folders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
tui = { package = "ratatui", version = "0.22.0", features = ["all-widgets"]}
crossterm = "0.27"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
itertools = "0.11"
clap = { version = "4.4.2", features = ["derive"] }
notify-debouncer-full = "0.3.1"