[package]
name = "file_task"
version = "0.1.0"
edition = "2021"
authors = ["tcallan"]
description = "Monitor the status of tasks represented by files in folders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "8.2.0"
tui = { package = "ratatui", version = "0.22.0", features = ["all-widgets"]}
crossterm = "0.28"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
itertools = "0.14"
clap = { version = "4.5.42", features = ["derive"] }
notify-debouncer-full = "0.6.0"